--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.symphony">
 
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -23,6 +23,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:targetApi="q">
+        <activity android:name=".ViewStatus"></activity>
+        <activity android:name=".CreateStatus" />
         <activity android:name=".ChatActivity" />
         <activity android:name=".MyContacts" />
         <activity
@@ -54,8 +56,10 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
-        <service android:name=".Services.FirebaseService"/>
-        <receiver android:name=".Services.NotificationReceiver"/>
+
+        <service android:name=".Services.FirebaseService" />
+
+        <receiver android:name=".Services.NotificationReceiver" />
     </application>
 
 </manifest>
