--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.symphony">
-
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the "MyLocation" functionality.
+    -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -23,14 +29,34 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:targetApi="q">
-        <activity android:name=".ViewStatus"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".CreateStatus"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".ChatActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".MyContacts"
-            android:screenOrientation="portrait"/>
+        <activity android:name=".Settings"></activity>
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/.
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
+        <activity
+            android:name=".MapsActivity"
+            android:label="@string/title_activity_maps" />
+        <activity
+            android:name=".ViewStatus"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".CreateStatus"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ChatActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".MyContacts"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".Info"
             android:screenOrientation="portrait" />
@@ -62,8 +88,11 @@
         </provider>
 
         <service android:name=".Services.FirebaseService" />
-
         <receiver android:name=".Services.NotificationReceiver" />
+
+
+        <service android:name=".Services.LocationService" />
+        <receiver android:name=".Services.LocationReceiver" />
     </application>
 
 </manifest>
